kind-goodnotes-k8s-demo/apps/bar/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar
  namespace: apps
spec:
  hostnames:
    - bar.localhost
  parentRefs:
    - name: public-gateway
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bar
          port: 80
